hard-gists/9f2d7da68779a17a0890/run.log
=== Docker Run Log for 9f2d7da68779a17a0890 ===
Started at: Mi 29. Okt 18:42:25 CET 2025

[2025-10-29 18:42:25] START: Running container for 9f2d7da68779a17a0890
[2025-10-29 18:42:25] SUCCESS: Container 211cec4d20ae1a6a2934da802a182394d4b71570040075515ebff4539061dcc0 started for 9f2d7da68779a17a0890
=== Container logs for 9f2d7da68779a17a0890 ===
  File "/snippet.py", line 30
    if "already exists" not in e.message: print e
                                          ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9f2d7da68779a17a0890 ===
[2025-10-29 18:42:27] INFO: Container 211cec4d20ae1a6a2934da802a182394d4b71570040075515ebff4539061dcc0 has stopped
